Mon Feb 12 14:44:06 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Removed old todo's, extended msvc ver check

        * ace/Codeset_IBM1047.cpp:
        * ace/Functor.cpp:
        * ace/Functor.inl:
        * ace/Hash_Map_Manager_T.cpp:
        * ace/Hash_Multi_Map_Manager_T.cpp:
        * ace/Sched_Params.cpp:
        * ace/Sched_Params.inl:
          Converted to doxygen style documentation

        * bin/doxygen-convert-h.pl:
          Only handle source files

Mon Feb 12 14:38:06 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CORBA_macros.h:
          Use ACE_LACKS_DEPRECATED_MACROS to make it possible to build without
          all the emulated exception macros. Will make sure people can't use them
          anymore in core code without noticing that

        * ace/Global_Macros.h:
          Just define ACE_THROW_SPEC again as about a week ago, we need a fuzz check
          to make sure people don't use this anymore in TAO

        * ace/Reactor.h:
          Layout change

        * tests/Thread_Manager_Test.cpp:
          Layout change to debug message

Mon Feb 12 14:35:25 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/doxygen-convert-h.pl:

          Allow filenames or directories.  If a directory is passed, it is
          recursively searched for any file.

Mon Feb 12 13:57:06 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Removed ACE_THROW_SPEC

Sat Feb 10 23:13:06 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Svc_Conf_Lexer.cpp (ace_yy_buffer_state): Disable VC8 warning
          C4351 (input_ elements will be default-initialized) for this
          block. The new behavior is good and desireable, so the warning
          noise can be silenced in this case.

        * ace/Timer_Hash_T.cpp (reschedule, schedule_i): When calculating the
          hash value, truncate the seconds value down to size_t range because